--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             var textInput = document.getElementById("textInput").value;
 
             // Make a POST request to the FastAPI endpoint
-            fetch("http://127.0.0.1:8000/predict", {
+            fetch("https://threat-detection.onrender.com/predict", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
@@ -37,7 +37,7 @@
             .then(response => response.json())
             .then(data => {
                 // Update the result paragraph with the prediction
-                document.getElementById("result").innerText = `Predicted Class: ${data[0]}`;
+                document.getElementById("result").innerText = `Predicted Class: ${data}`;
             })
             .catch(error => {
                 console.error('Error:', error);
